Update SF for clinvar variants (PIK3CA).ipynb

--- a/SF for clinvar variants (PIK3CA).ipynb
+++ b/SF for clinvar variants (PIK3CA).ipynb
@@ -157,7 +157,7 @@
     "                        uncert_list.append(i[pos]) # Add amino acid to the list of uncertain prediction\n",
     "           \n",
     "            # special case for the last amino acid           \n",
-    "            if pos==lenght:\n",
+    "            elif pos==lenght:\n",
     "                if i[pos] in human_list:\n",
     "                    # identical amino acid in identical fragment\n",
     "                    if i[pos_bfr] in hpos_bfr_list :\n",
